--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -94,7 +94,6 @@
         color: darken($color: white, $amount: 20%);
       }
     }
-
     &__cart,
     &__menu {
       height: 1.9rem;
@@ -110,19 +109,13 @@
     }
   }
   .disabled-icon {
-    display: block;
     visibility: hidden;
   }
-
-  .badge {
-    background-color: $btnColorSecondary;
-    border-radius: 25rem;
-    color: $fontColorQuaternary;
-    height: 1.8rem;
-    padding: 0.2rem;
-    width: 1.8rem;
-    &:hover {
-      color: lighten($color: $btnColorSecondary, $amount: 70%);
-    }
+  .cart-number {
+    color: white;
+    font-size: 1.2rem;
+    left: 0.2rem;
+    position: relative;
+    top: -0.7rem;
   }
 }
